--- a/index.html
+++ b/index.html
@@ -11,23 +11,81 @@
         .container { padding: 2rem; max-width: 950px; margin: auto; }
         .article-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--primary); }
         .quote { font-style: italic; color: var(--accent); font-weight: bold; border-left: 4px solid var(--accent); padding-left: 15px; margin-bottom: 20px; }
-        
-        /* Hizmet Kartları Stili */
         .service-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 30px 0; }
         .service-card { background: var(--white); border: 1px solid #eee; padding: 25px; border-radius: 15px; border-bottom: 4px solid var(--accent); transition: 0.3s; text-align: center; }
         .service-card:hover { transform: translateY(-10px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
-        .service-card i { font-size: 2rem; display: block; margin-bottom: 15px; }
-        .service-card h3 { color: var(--primary); margin-bottom: 10px; font-size: 1.2rem; }
-        .service-card p { font-size: 0.95rem; color: #555; }
-
         .award-section { background: #fffdf2; border: 2px solid var(--gold); padding: 20px; border-radius: 15px; text-align: center; margin: 25px 0; }
         .award-img { max-width: 100%; height: auto; border-radius: 10px; }
         .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); margin: 2.5rem 0; }
         .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
         .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-top: 2rem; }
-        .cert-card { background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); text-align: center; font-size: 0.8rem; }
+        .cert-card { background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); text-align: center; }
         .cert-card img { width: 100%; border-radius: 5px; }
-        
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
         .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
-        .contact-btn { display: inline-block; color: white; padding: 14px
+        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; }
+        .whatsapp-btn { background: var(--whatsapp); }
+        .email-btn { background: var(--accent); }
+        .phone-btn { background: #2980b9; }
+    </style>
+</head>
+<body>
+    <header class="hero">
+        <h1>BAHTİYAR AYHAN</h1>
+        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Danışmanı</p>
+    </header>
+    <div class="container">
+        <section class="article-box">
+            <h2>Vizyon & Yönetim Felsefesi</h2>
+            <p class="quote">"Fabrika Yönetimlerinde çok lokasyonlu şirketlerde Üretim, Planlama, İnsan Kaynakları, İdari İşler, Satinalma departmanlarında verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."</p>
+            <p>Görev aldığım şirketlerde, tüm departman süreçlerinin iyileştirilmesi ve operasyonel mükemmeliyet hedefiyle aktif rol alıyorum. Entegre yönetim sistemleri ile maliyetleri düşürerek şirketin rekabet gücünü ileriye taşıyorum.</p>
+        </section>
+
+        <h2 style="text-align: center;">🛠️ Profesyonel Çözüm Ortaklığı</h2>
+        <div class="service-grid">
+            <div class="service-card">
+                <h3>💰 Maliyet Azaltma</h3>
+                <p>Gizli gider analizi ile %15-20 maliyet düşüşü.</p>
+            </div>
+            <div class="service-card">
+                <h3>🏢 Çok Lokasyonlu Yönetim</h3>
+                <p>Farklı sahaların tek vizyonla birleştirilmesi.</p>
+            </div>
+            <div class="service-card">
+                <h3>🎓 Mükemmellik Eğitimi</h3>
+                <p>Six Sigma ve Yalın Üretim kültürü aşılanması.</p>
+            </div>
+        </div>
+
+        <div class="award-section">
+            <h3 style="color: var(--gold);">🏆 Ulusal Uygulama Ödülü</h3>
+            <img src="Ödül.png" alt="Ödül" class="award-img">
+        </div>
+
+        <div class="video-wrapper">
+            <iframe src="https://www.youtube.com/embed/L2gJFetTgEE" allowfullscreen></iframe>
+        </div>
+
+        <h3 style="text-align: center;">📜 Uzmanlık Sertifikaları</h3>
+        <div class="cert-grid">
+            <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma</p></div>
+            <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div>
+            <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div>
+            <div class="cert-card"><img src="sertifika4.png"><p>OpEx</p></div>
+            <div class="cert-card"><img src="sertifika5.png"><p>Proje Yönetimi</p></div>
+            <div class="cert-card"><img src="sertifika6.png"><p>Uluslararası Projeler</p></div>
+            <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="btn-group">
+            <a href="tel:+905427244122" class="contact-btn phone-btn">📞 Ara</a>
+            <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp</a>
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta</a>
+        </div>
+        <div style="margin-top: 20px;">
+            📊 Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&label=GİRİŞ" style="vertical-align: middle;">
+        </div>
+    </footer>
+</body>
+</html>
