--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; 
             border: 3px solid var(--gold); box-shadow: 0 15px 35px rgba(0,0,0,0.2);
         }
-        .cta-section h2 { color: var(--gold); margin-top: 0; }
+        .cta-section h2 { color: var(--gold); margin-top: 0; font-size: 1.8rem; }
         .cta-main-btn { 
             display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; 
             text-decoration: none; border-radius: 50px; font-weight: 900; font-size: 1.2rem; transition: 0.3s;
@@ -32,15 +32,37 @@
         .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; margin: 2.5rem 0; }
         .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
 
-        /* SERTİFİKALAR GERİ GELDİ */
         .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-top: 2rem; }
         .cert-card { background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); text-align: center; }
         .cert-card img { width: 100%; border-radius: 5px; margin-bottom: 5px; }
-        .cert-card p { font-size: 0.85rem; font-weight: bold; margin: 0; }
-
+        
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 20px 0; }
         .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; }
         .whatsapp-btn { background: var(--whatsapp); }
         .email-btn { background: var(--accent); }
         .phone-btn { background: #2980b9; }
+    </style>
+</head>
+<body>
+    <header class="hero">
+        <h1>BAHTİYAR AYHAN</h1>
+        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Uzmanı</p>
+    </header>
+
+    <div class="container">
+        <section class="article-box">
+            <h2>Yönetim Felsefesi</h2>
+            <p class="quote">"Verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."</p>
+            <p>Çok lokasyonlu şirketlerde üretimden satın almaya kadar tüm süreçleri entegre ederek maliyetleri düşürüyor, sürdürülebilir büyüme sağlıyorum.</p>
+        </section>
+
+        <div class="cta-section">
+            <h2>HIZLI TEŞHİS & ÇÖZÜM</h2>
+            <p><strong>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</strong></p>
+            <a href="https://wa.me/905427244122" class="cta-main-btn">ŞİMDİ RANDEVU AL</a>
+        </div>
+
+        <h2 style="text-align: center;">📈 Somut Başarılar</h2>
+        <div class="grid">
+            <div class="card success-card">
