--- a/index.html
+++ b/index.html
@@ -3,51 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bahtiyar Ayhan | Danışmanlık</title>
+    <title>Bahtiyar Ayhan | Stratejik Yönetim & Danışmanlık</title>
     <style>
-        :root { --p:#2c3e50; --a:#e67e22; --w:#fff; --g:#d4af37; --wa:#25D366; }
-        body { font-family: sans-serif; background:#f4f7f6; color:var(--p); margin:0; padding:0; line-height:1.5; }
-        .h { background:var(--p); color:var(--w); padding:2rem 1rem; text-align:center; }
-        .c { padding:1.5rem; max-width:900px; margin:auto; }
-        .box { background:var(--w); padding:1.5rem; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.1); margin-bottom:1.5rem; }
-        .cta { background:linear-gradient(135deg,#2c3e50,#1a252f); color:white; padding:30px; border-radius:15px; text-align:center; margin:2rem 0; border:2px solid var(--g); }
-        .btn-m { display:inline-block; background:var(--g); color:var(--p); padding:15px 30px; text-decoration:none; border-radius:50px; font-weight:bold; margin-top:15px; }
-        .grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:15px; margin:1.5rem 0; }
-        .card { background:var(--w); padding:15px; border-radius:12px; border-bottom:4px solid #27ae60; text-align:center; }
-        .v-w { position:relative; padding-bottom:56.25%; height:0; overflow:hidden; border-radius:12px; margin:1.5rem 0; }
-        .v-w iframe { position:absolute; top:0; left:0; width:100%; height:100%; border:0; }
-        .cert-g { display:grid; grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:10px; }
-        .cert-card { background:white; padding:8px; border-radius:8px; text-align:center; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
-        .cert-card img { width:100%; border-radius:4px; }
-        .f { background:var(--p); color:var(--w); padding:2rem 1rem; text-align:center; }
-        .b-g { display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin:1rem 0; }
-        .btn { color:white; padding:12px 20px; text-decoration:none; border-radius:50px; font-weight:bold; font-size:0.9rem; }
+        :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; }
+        body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
+        .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
+        .container { padding: 2rem; max-width: 950px; margin: auto; }
+        .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
+        .cta-main-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; }
+        .article-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--primary); }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0; }
+        .card { background: var(--white); border: 1px solid #eee; padding: 25px; border-radius: 15px; text-align: center; }
+        .success-card { border-bottom: 4px solid #27ae60; background: #f9fffb; }
+        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; margin: 2.5rem 0; }
+        .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; margin-top: 2rem; }
+        .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .cert-card img { width: 100%; border-radius: 5px; }
+        .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
+        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 150px; }
+        .whatsapp-btn { background: var(--whatsapp); }
+        .email-btn { background: var(--accent); }
+        .phone-btn { background: #2980b9; }
     </style>
 </head>
 <body>
-    <header class="h"><h1>BAHTİYAR AYHAN</h1><p>Üretim & Verimlilik Danışmanı</p></header>
-    <div class="c">
-        <div class="box">
-            <h2 style="color:var(--a)">Yönetim Felsefesi</h2>
-            <p><i>"Verimlilik, sadece süreçleri değil; bakış açısını da dönüştürmekle başlar."</i></p>
-            <p>Çok lokasyonlu şirketlerde operasyonel mükemmellik ve maliyet düşürme odaklı sistemler kuruyorum.</p>
-        </div>
-        <div class="cta">
+    <header class="hero">
+        <h1>BAHTİYAR AYHAN</h1>
+        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Uzmanı</p>
+    </header>
+
+    <div class="container">
+        <section class="article-box">
+            <h2>Yönetim Felsefesi</h2>
+            <p>Çok lokasyonlu şirketlerde verimliliği artırırken maliyetleri düşüren, entegre yönetim sistemleri kuruyorum.</p>
+        </section>
+
+        <div class="cta-section">
             <h2>HIZLI TEŞHİS & ÇÖZÜM</h2>
-            <p><b>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</b></p>
-            <a href="https://wa.me/905427244122" class="btn-m">WHATSAPP İLE RANDEVU AL</a>
+            <p><strong>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</strong></p>
+            <a href="https://wa.me/905427244122" class="cta-main-btn">ŞİMDİ RANDEVU AL</a>
         </div>
+
         <div class="grid">
-            <div class="card"><h3>%75 Fire Azaltma</h3><p>Süreç optimizasyonu ile fire oranlarını minimize ettik.</p></div>
-            <div class="card"><h3>%25 Kapasite Artışı</h3><p>Yatırımsız verimlilik artışı sağladık.</p></div>
+            <div class="card success-card"><h3>%75 Fire Azaltma</h3><p>Süreç optimizasyonu ile kârlılık artışı.</p></div>
+            <div class="card success-card"><h3>%25 Kapasite</h3><p>Ek yatırım yapmadan verimlilik artışı.</p></div>
         </div>
-        <div style="text-align:center; background:#fffdf2; padding:15px; border:1px solid var(--g); border-radius:12px;">
-            <h3 style="margin:0; color:var(--g);">🏆 Ulusal Uygulama Ödülü</h3>
-            <img src="Ödül.png" style="max-width:100%; margin-top:10px; border-radius:8px;">
+
+        <div style="text-align:center; margin: 2rem 0;">
+            <h3>🏆 Ulusal Uygulama Ödülü</h3>
+            <img src="Ödül.png" style="max-width:100%; border-radius:10px; border: 2px solid var(--gold);">
         </div>
-        <div class="v-w"><iframe src="https://www.youtube.com/embed/L2gJFetTgEE" allowfullscreen></iframe></div>
-        <h3 style="text-align:center">📜 Uzmanlık Sertifikaları</h3>
-        <div class="cert-g">
+
+        <div class="video-wrapper">
+            <iframe src="https://www.youtube.com/embed/L2gJFetTgEE" allowfullscreen></iframe>
+        </div>
+
+        <h3 style="text-align: center;">📜 Uzmanlık Sertifikaları</h3>
+        <div class="cert-grid">
             <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma</p></div>
             <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div>
             <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div>
@@ -57,7 +71,7 @@
             <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div>
         </div>
     </div>
-    <footer class="f">
-        <div class="b-g">
-            <a href="tel:+905427244122" class="btn" style="background:#2980b9">📞 Ara</a>
-            <a href="https://wa.me/905427244122" class="btn" style="background:var(--wa)">
+
+    <footer class="footer">
+        <h3>Hemen İletişime Geçin</h3>
+        <div class="btn-
