--- a/index.html
+++ b/index.html
@@ -6,29 +6,21 @@
     <title>Bahtiyar Ayhan | Stratejik Yönetim & Danışmanlık</title>
     <style>
         :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; }
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
+        body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
         .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
         .container { padding: 2rem; max-width: 950px; margin: auto; }
         .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
-        .cta-main-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; }
+        .cta-main-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; margin-top: 15px; }
         .article-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--primary); }
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 25px 0; }
-        .card { background: var(--white); border: 1px solid #eee; padding: 25px; border-radius: 15px; text-align: center; }
-        .success-card { border-bottom: 4px solid #27ae60; background: #f9fffb; }
-        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; margin: 2.5rem 0; }
-        .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
-        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px; margin-top: 2rem; }
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; margin-top: 2rem; }
         .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
         .cert-card img { width: 100%; border-radius: 5px; }
-        
-        /* İLETİŞİM BÖLGESİ STİLLERİ */
         .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
         .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
-        .contact-btn { display: flex; align-items: center; justify-content: center; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 160px; transition: 0.3s; }
+        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 150px; }
         .whatsapp-btn { background: var(--whatsapp); }
         .email-btn { background: var(--accent); }
         .phone-btn { background: #2980b9; }
-        .contact-btn:hover { transform: scale(1.05); filter: brightness(1.1); }
     </style>
 </head>
 <body>
@@ -54,4 +46,23 @@
             <div class="cert-card"><img src="sertifika1.png"><p>Six Sigma</p></div>
             <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div>
             <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div>
-            <div class
+            <div class="cert-card"><img src="sertifika4.png"><p>OpEx</p></div>
+            <div class="cert-card"><img src="sertifika5.png"><p>Proje Yönetimi</p></div>
+            <div class="cert-card"><img src="sertifika6.png"><p>Uluslararası Projeler</p></div>
+            <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <h3>Hemen İletişime Geçin</h3>
+        <div class="btn-group">
+            <a href="tel:+905427244122" class="contact-btn phone-btn">📞 Ara</a>
+            <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp</a>
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta</a>
+        </div>
+        <div style="margin-top: 25px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.1);">
+            📊 Toplam Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&style=flat-square&label=GIRIŞ" alt="Sayaç">
+        </div>
+    </footer>
+</body>
+</html>
