--- a/index.html
+++ b/index.html
@@ -7,38 +7,59 @@
     <style>
         :root { --primary: #2c3e50; --accent: #e67e22; --white: #ffffff; --whatsapp: #25D366; --gold: #d4af37; }
         body { font-family: 'Segoe UI', sans-serif; background: #f4f7f6; color: var(--primary); margin: 0; padding: 0; line-height: 1.6; }
-        .hero { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; }
-        .container { padding: 2rem; max-width: 950px; margin: auto; }
-        .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 40px; border-radius: 20px; text-align: center; margin: 40px 0; border: 3px solid var(--gold); }
-        .cta-main-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 18px 45px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.2rem; margin-top: 15px; }
-        .article-box { background: var(--white); padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin-bottom: 2.5rem; border-top: 5px solid var(--primary); }
-        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; margin-top: 2rem; }
-        .cert-card { background: white; padding: 10px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
-        .cert-card img { width: 100%; border-radius: 5px; }
-        .footer { background: var(--primary); color: var(--white); padding: 3rem 1rem; text-align: center; margin-top: 3rem; }
-        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin: 25px 0; }
-        .contact-btn { display: inline-block; color: white; padding: 14px 30px; text-decoration: none; border-radius: 50px; font-weight: bold; min-width: 150px; }
-        .whatsapp-btn { background: var(--whatsapp); }
-        .email-btn { background: var(--accent); }
-        .phone-btn { background: #2980b9; }
+        .hero { background: var(--primary); color: var(--white); padding: 2rem 1rem; text-align: center; }
+        .container { padding: 1.5rem; max-width: 900px; margin: auto; }
+        
+        /* DARBOĞAZ KUTUSU */
+        .cta-section { background: linear-gradient(135deg, #2c3e50 0%, #1a252f 100%); color: white; padding: 30px; border-radius: 15px; text-align: center; margin: 25px 0; border: 3px solid var(--gold); }
+        .cta-btn { display: inline-block; background: var(--gold); color: #2c3e50; padding: 15px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; margin-top: 15px; }
+
+        .box { background: var(--white); padding: 20px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); margin-bottom: 20px; }
+        
+        /* BAŞARI RAKAMLARI */
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin: 20px 0; }
+        .card { background: #f9fffb; border-bottom: 4px solid #27ae60; padding: 20px; border-radius: 12px; text-align: center; }
+
+        /* ÖDÜL BÖLGESİ */
+        .award-box { background: #fffdf2; border: 1px solid var(--gold); padding: 20px; border-radius: 15px; text-align: center; margin: 25px 0; }
+        .award-box img { max-width: 100%; height: auto; border-radius: 10px; margin-top: 10px; }
+
+        .cert-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 10px; margin-top: 20px; }
+        .cert-card { background: white; padding: 8px; border-radius: 8px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+        .cert-card img { width: 100%; border-radius: 4px; }
+
+        .footer { background: var(--primary); color: var(--white); padding: 2.5rem 1rem; text-align: center; }
+        .btn-group { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin: 20px 0; }
+        .contact-btn { display: inline-block; color: white; padding: 12px 25px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 0.9rem; }
     </style>
 </head>
 <body>
     <header class="hero">
         <h1>BAHTİYAR AYHAN</h1>
-        <p>Stratejik Üretim Yönetimi & Operasyonel Mükemmellik Uzmanı</p>
+        <p>Stratejik Üretim Yönetimi Uzmanı</p>
     </header>
 
     <div class="container">
-        <section class="article-box">
+        <div class="box">
             <h2>Yönetim Felsefesi</h2>
             <p>Çok lokasyonlu şirketlerde verimliliği artırırken maliyetleri düşüren sürdürülebilir yönetim sistemleri kuruyorum.</p>
-        </section>
+        </div>
 
         <div class="cta-section">
             <h2>HIZLI TEŞHİS & ÇÖZÜM</h2>
             <p><strong>"Fabrikanızdaki darboğazı 48 saat içinde teşhis edelim. İlk görüşme ücretsizdir."</strong></p>
-            <a href="https://wa.me/905427244122" class="cta-main-btn">ŞİMDİ RANDEVU AL</a>
+            <a href="https://wa.me/905427244122" class="cta-btn">ŞİMDİ RANDEVU AL</a>
+        </div>
+
+        <h2 style="text-align: center;">📈 Somut Başarılar</h2>
+        <div class="grid">
+            <div class="card"><h3>🔥 %75 Fire Azaltma</h3><p>Üretim hattında fireyi %8'den %2'ye indirerek kârlılık sağladık.</p></div>
+            <div class="card"><h3>⚡ %25 Kapasite Artışı</h3><p>Yatırımsız süreç optimizasyonu ile üretim hacmini artırdık.</p></div>
+        </div>
+
+        <div class="award-box">
+            <h3 style="color:var(--gold)">🏆 Ulusal Uygulama Ödülü</h3>
+            <img src="Ödül.png" alt="Bahtiyar Ayhan Ödül">
         </div>
 
         <h3 style="text-align: center;">📜 Sertifikalar</h3>
@@ -47,22 +68,14 @@
             <div class="cert-card"><img src="sertifika2.png"><p>Supply Chain</p></div>
             <div class="cert-card"><img src="sertifika3.png"><p>Cost Reduction</p></div>
             <div class="cert-card"><img src="sertifika4.png"><p>OpEx</p></div>
-            <div class="cert-card"><img src="sertifika5.png"><p>Proje Yönetimi</p></div>
-            <div class="cert-card"><img src="sertifika6.png"><p>Uluslararası Projeler</p></div>
+            <div class="cert-card"><img src="sertifika5.png"><p>Proje</p></div>
+            <div class="cert-card"><img src="sertifika6.png"><p>Global</p></div>
             <div class="cert-card"><img src="sertifika7.png"><p>Business</p></div>
         </div>
     </div>
 
     <footer class="footer">
-        <h3>Hemen İletişime Geçin</h3>
         <div class="btn-group">
-            <a href="tel:+905427244122" class="contact-btn phone-btn">📞 Ara</a>
-            <a href="https://wa.me/905427244122" class="contact-btn whatsapp-btn">💬 WhatsApp</a>
-            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn email-btn">✉️ E-posta</a>
-        </div>
-        <div style="margin-top: 25px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.1);">
-            📊 Toplam Ziyaret: <img src="https://komarev.com/ghpvc/?username=BahtiyarAyhan&color=orange&style=flat-square&label=GIRIŞ" alt="Sayaç">
-        </div>
-    </footer>
-</body>
-</html>
+            <a href="tel:+905427244122" class="contact-btn" style="background:#2980b9">📞 Ara</a>
+            <a href="https://wa.me/905427244122" class="contact-btn" style="background:var(--whatsapp)">💬 WhatsApp</a>
+            <a href="mailto:bbudumlu@hotmail.com" class="contact-btn" style="background
